modify store - stock component

--- a/src/app/components/stock/stock.component.css
+++ b/src/app/components/stock/stock.component.css
@@ -44,6 +44,7 @@
   flex-flow: column;
   height: 200px;
   background-color: gray;
+  margin-top: 1.2rem;
 }
 
 /*   ||   Making Card Category 3 parts to add background 2 half's effect  */
