--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
 </header>
 <app-stock></app-stock>
 <footer>
-  <aside>
+  <!--   <aside>
     <img src="../../../assets//images/footer.png" width="900" height="100" />
-  </aside>
+  </aside> -->
 </footer>
