--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,1 +1,55 @@
-<p>details works!</p>
+<header>
+  <article class="details title-container">
+    <h1 class="title">Trurismo Omaggio</h1>
+    <p class="cost">$2,845,000</p>
+  </article>
+  <section class="details description-container">
+    <p class="description-p">
+      <span class="description-p-span1"
+        >In a world where it often feels wlike the best you can hope for is an
+        ealleletric gap to some hybrid porn, Grotti's stunnibbng farewell
+        tribute to the m ighty V8 is the booty call of your ot, heavy dreams. So
+        sit back and strap in for one last breath of pure gasoline as you
+        autograph the o-Zone for the final time.</span
+      >
+      <span class="descriptionn-p-span2">
+        You can upgrade this vehicle with Imani Tech at an Agency Workshop.
+      </span>
+    </p>
+    <img class="details img" src="https://placehold.jp/400x400.png" />
+    <article class="details color-picker">
+      <h2 class="color-picker-title">
+        {{ "select from available colors to order" | uppercase }}
+      </h2>
+      <div class="color-container">
+        <span class="color red"></span><span class="color pink"></span
+        ><span class="color yellow"></span><span class="color gold"></span
+        ><span class="color green"></span><span class="color blue"></span
+        ><span class="color black"></span><span class="color white"></span>
+      </div>
+    </article>
+    <aside class="details progress">
+      <h2 class="details progress-title">Vehicle Status</h2>
+      <p class="details progress-description">
+        <span class="details progress-description-title">Top Speed</span
+        ><progress class="details progress-description-details"></progress>
+      </p>
+      <p class="details progress-description">
+        <span class="details progress-description-title">Acceleration</span
+        ><progress class="details progress-description-details"></progress>
+      </p>
+      <p class="details progress-description">
+        <span class="details progress-description-title">Braking</span
+        ><progress class="details progress-description-details"></progress>
+      </p>
+      <p class="details progress-description">
+        <span class="details progress-description-title">Traction</span
+        ><progress class="details progress-description-details"></progress>
+      </p>
+    </aside>
+  </section>
+  <button class="details btn">order</button>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
