--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,4 @@
-<header>
-  <button class="header-filter-btn">
-    <span>Sort by Price</span><span>&mdash;</span>
-  </button>
-</header>
+<header><app-filter></app-filter></header>
 <app-stock></app-stock>
 <footer>
   <!--   <aside>
