--- a/src/app/components/stock/stock.component.html
+++ b/src/app/components/stock/stock.component.html
@@ -32,7 +32,10 @@
     <ng-container *ngIf="currentList; else currentListUndefined">
       <ol class="stock-section-list" #store>
         <div *ngFor="let currentItem of currentList">
-          <li [routerLink]="['details', currentItem.id]">
+          <li
+            [routerLink]="['/details', currentItem.id]"
+            [queryParams]="{ filter: selectedFilter }"
+          >
             <article class="card">
               <h2
                 class="card-category"
