--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,5 +1,5 @@
 <!-- Require a container with absolute position -->
 
-<button class="filter-btn">
+<button (click)="sortHandler()" class="filter-btn">
   <span>Sort by Price</span><span>&mdash;</span>
 </button>
