--- a/src/app/components/stock/stock.component.css
+++ b/src/app/components/stock/stock.component.css
@@ -31,10 +31,7 @@
 }
 
 .stock-section-list {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  align-content: space-between;
+  column-count: 3;
 }
 
 .stock-section-list li {
