--- a/src/app/pages/details/details.component.css
+++ b/src/app/pages/details/details.component.css
@@ -195,3 +195,33 @@ main {
 .filter-container {
   top: 10%;
 }
+
+/*  Stats  */
+
+.stats-description {
+  display: flex;
+  justify-content: space-between;
+  width: 260px;
+}
+
+.stats-description-details {
+  display: flex;
+  align-items: center;
+}
+
+.stats-description-details > span {
+  display: inline-block;
+  min-width: 1.5rem;
+  height: 5px;
+  margin-inline: 3px;
+  background-color: rgba(255, 255, 255, 0.306);
+  position: relative;
+}
+
+.stats-description-details > span > span {
+  position: absolute;
+  width: 100%;
+  min-height: 100%;
+  top: 0;
+  left: 0;
+}
