--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
-<header><app-filter></app-filter></header>
-<app-stock></app-stock>
+<header>
+  <app-filter (sortByEvent)="sortEventHandler($event)"></app-filter>
+</header>
+<app-stock [sortBy]="sortBy"></app-stock>
 <footer>
   <!--   <aside>
     <img src="../../../assets//images/footer.png" width="900" height="100" />
