--- a/src/app/components/stock/stock.component.html
+++ b/src/app/components/stock/stock.component.html
@@ -1,4 +1,4 @@
-<main class="stock-container">
+<main class="stock-container" #stockBorder>
   <nav class="stock-nav">
     <ul class="stock-nav-list">
       <li>
